# Media-Trends-Analyser

./: README.md  docker-compose.yml  package-lock.json  run_clean.sh  run_demo.sh
.github/workflows/: ci-agent-service.yml  ci-data-scraper-service.yml  deploy.yml
client/: cspell.json  knip.json  package-lock.json  package.json  periodic_summary.json
client/.husky/: pre-commit
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: analyticsTab.tsx  reportTab.tsx
client/src/constants/: categories.ts  chartColors.ts  sources.tsx
database/: init.sql  model.sql  seed_data.sql.example
scripts/: run_clean.sh  run_demo.sh
services/agent-service/: Dockerfile  README.md  pyproject.toml
services/agent-service/app/: main.py
services/agent-service/app/agents/: agent_config.py  summary_agent.py
services/agent-service/app/api/v1/: daily_summary.py  periodic_summary.py  router.py
services/agent-service/app/api/v1/endpoints/: daily_summaries.py  periodic_summary.py
services/agent-service/app/core/: agent_config.py
services/agent-service/app/models/: article.py  daily_summary.py
services/agent-service/app/schemas/: __init__.py  article.py  daily_summary.py  periodic_summary.py  task_status.py
services/agent-service/app/services/: llm-service.py  llm_service.py  summary_service.py  task_service.py
services/agent-service/tests/: test_api_periodic_summary.py  test_summary_agent.py  test_summary_service.py  test_task_service.py
services/api-gateway/: README.md
services/data-scraper-service/: Dockerfile  README.md  pyproject.toml
(+86 files in other folders)
